--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-color: #a0a4b8;
+  /* background-color: #a0a4b8; */
   margin: 0;
   display: flex;
   flex-direction: column;
