--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -22,7 +22,7 @@
     <div class="header-logo-container">
       <a href="/">
         <img 
-          src="{% static 'images/.svg' %}"
+          src="{% static 'images/' %}"
           alt="The Car Collector Logo"
         >
       </a>
