--- a/main_app/templates/cars/detail.html
+++ b/main_app/templates/cars/detail.html
@@ -26,6 +26,10 @@
       <h2>A {{ car.year }} {{ car.make }} {{ car.model }} is a classic car.</h2>
     {% endif %}
     <p>{{ car.description }}</p>
+    <div class="car-actions">
+      <a href="{% url 'cars_update' car.id %}" class="btn warn">Edit</a>
+      <a href="{% url 'cars_delete' car.id %}" class="btn danger">Delete</a>
+    </div>
   </div>
 </section>
 
