implement functionality of create and delete

--- a/main_app/templates/cars/detail.html
+++ b/main_app/templates/cars/detail.html
@@ -19,7 +19,7 @@
     >
   </div>
   <div class="car-details">
-    <h1>{{ car.owner }}'s</h1>
+    <h1>{{ car.owner }}'s Car</h1>
     {% if car.year > 2000 %}
       <h2>A {{ car.year }} {{ car.make }} {{ car.model }} is a car from the 21st Century.</h2>
     {% else %}
