--- a/main_app/static/css/cars/car-detail.css
+++ b/main_app/static/css/cars/car-detail.css
@@ -24,7 +24,7 @@
   margin-top: 20px;
 }
 
-.feedings-toy-container {
+.maintenance-renter-container {
   display: flex;
   flex-direction: column;
   padding-bottom: 20px;
@@ -41,7 +41,7 @@
   margin: 0 8px;
 }
 
-.toy-container {
+.renter-container {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -94,7 +94,7 @@
   margin: 5px 0;
 }
 
-.feedings-toy-container > section {
+.maintenance-renter-container > section {
   width: 80%;
   min-width: 360px;
   border: var(--borders);
@@ -140,25 +140,25 @@
   padding: 3px;
 }
 
-.feedings table {
+.maintenance table {
   width: calc(100% - 16px);
   text-align: left;
   border-collapse: collapse;
   margin: 0 8px;
 }
 
-.feedings td {
+.maintenance td {
   padding: 8px 5px;
   font-size: var(--font-reg);
 }
 
-.feedings th {
+.maintenance th {
   font-size: var(--font-l);
   padding: 5px 5px 0;
   border-bottom: rgb(36, 116, 248) solid 2px;
 }
 
-.feedings tr:nth-child(even) {
+.maintenance tr:nth-child(even) {
   background-color: #f3f3fd;
 }
 
@@ -201,19 +201,19 @@
     margin-right: 25px;
   }
 
-  .feedings-toy-container {
+  .maintenance-renter-container {
     flex-direction: row;
     justify-content: space-around;
     align-items: flex-start;
   }
 
-  .feedings-toy-container > section {
+  .maintenance-renter-container > section {
     width: 45%;
   }
 }
 
 @media only screen and (min-width: 1024px) {
-  .feedings-toy-container {
+  .maintenance-renter-container {
     padding: 0 40px;
   }
 }
