--- a/main_app/templates/cars/detail.html
+++ b/main_app/templates/cars/detail.html
@@ -1,4 +1,19 @@
 {% extends 'base.html' %} {% load static %} {% block head %}
+
+<link 
+  href="https://cdn.jsdelivr.net/npm/mc-datepicker/dist/mc-calendar.min.css" 
+  rel="stylesheet" 
+/>
+<link rel="stylesheet" href="{% static 'css/mcdp.css' %}">
+<script 
+  src="https://cdn.jsdelivr.net/npm/mc-datepicker/dist/mc-calendar.min.js"
+>
+</script>
+<link 
+  rel="stylesheet" 
+  type="text/css" 
+  href="{% static 'css/cars/car-detail.css' %}"
+/>
 <link
   rel="stylesheet"
   type="text/css"
@@ -58,4 +73,17 @@
     </table>
   </section>
 </div>
+<h3>Add Vehicle Maintenance</h3>
+    <form
+      method="POST" 
+      class="subsection-content"
+    >
+      {% csrf_token %}
+      {{ maintenance_form.as_p }}
+      <button type="submit" class="btn submit">Add Vehicle Maintenance</button>
+      <h3>Past Maintenances</h3>
+    </form>
+  
+  
+    {% comment %} New code above {% endcomment %}
 {% endblock %}
