--- a/main_app/static/css/cars/car-detail.css
+++ b/main_app/static/css/cars/car-detail.css
@@ -54,20 +54,20 @@
   margin-right: 10px;
 }
 
-.unfed,
-.fed,
+.unserviced,
+.serviced,
 .no-toys,
 .all-toys {
   margin: 0;
   font-weight: bold;
 }
 
-.unfed,
+.unserviced,
 .no-toys {
   color: var(--danger);
 }
 
-.fed,
+.serviced,
 .all-toys {
   color: var(--submit);
 }
