add rental form

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -31,6 +31,7 @@
       <ul>
         <li><a href="{% url 'cars_index' %}">All Cars</a></li>
         <li><a href="{% url 'cars_create' %}">Add a Car</a></li>
+        <li><a href="{% url 'rental_create' %}">Add a Rental</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
