--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -30,8 +30,9 @@
     <nav>
       <ul>
         <li><a href="{% url 'cars_index' %}">All Cars</a></li>
+        <li><a href="{% url 'rentals_index' %}">All Rentals</a></li>
         <li><a href="{% url 'cars_create' %}">Add a Car</a></li>
-        <li><a href="{% url 'rental_create' %}">Add a Rental</a></li>
+        <li><a href="{% url 'rentals_create' %}">Add a Rental</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
