--- a/main_app/templates/main_app/rental_detail.html
+++ b/main_app/templates/main_app/rental_detail.html
@@ -5,20 +5,20 @@
 <link
   rel="stylesheet"
   type="text/css"
-  href="{% static 'css/toys/toy-detail.css' %}"
+  href="{% static 'css/rentals/rental-detail.css' %}"
 />
 {% endblock %}
 
 {% block content %}
   
-<div class="card" style="border-color: {{ toy.color }}">
-  <div class="card-bg" style="background-color: {{ toy.color }}"></div>
+<div class="card" style="border-color: {{ rental.driver }}">
+  <div class="card-bg" style="background-color: {{ rental.driver }}"></div>
   <div class="card-content">
-    <h2>{{ toy.name }}</h2>
-    <p>A {{ toy.color }} toy</p>
+    <h2>{{ rental.driver }}</h2>
+    <p>Rented for {{ rental.days_rented }} days</p>
   </div>
 </div>
-<a href="{% url 'toys_update' toy.id %}" class="btn warn">Edit</a>
-<a href="{% url 'toys_delete' toy.id %}" class="btn danger">Delete</a>
+<a href="{% url 'rentals_update' rental.id %}" class="btn warn">Edit</a>
+<a href="{% url 'rentals_delete' rental.id %}" class="btn danger">Delete</a>
 
 {% endblock %}
