add many to many fields, fix bugs

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -5,7 +5,7 @@
 <h1>About the Car Collector</h1>
 <hr />
 <p class="page-content">
-  I like long romantic walks down the produce aisle. Also, I am currently job seeking!
+  This is an application where you can add a vehicle, add, edit, delete vehicles maintenance to each designated vehicle's you add to your profile. You also have the ability to track any people who decide to rent your vehicle. 
 </p>
 
 {% endblock %}
