--- a/main_app/templates/cars/detail.html
+++ b/main_app/templates/cars/detail.html
@@ -111,5 +111,6 @@
         <p>{{car.year}} {{car.make}} {{car.model}}has never been maintenanced!</p>
       </div>
     {% endif %}
-  
+    </section>
+    
 {% endblock %}
