--- a/main_app/templates/main_app/car_form.html
+++ b/main_app/templates/main_app/car_form.html
@@ -11,7 +11,7 @@
   {% if car %}
     <h1>Edit {{ car.owner }}'s Car</h1>
   {% else %}
-    <h1>Add a Cat</h1>
+    <h1>Add a Car</h1>
   {% endif %}
   
   <img src="{% static 'images/cool-car.svg' %}" alt="A cool car"/>
