--- a/main_app/static/css/cars/car-detail.css
+++ b/main_app/static/css/cars/car-detail.css
@@ -56,19 +56,19 @@
 
 .unserviced,
 .serviced,
-.no-toys,
-.all-toys {
+.no-rentals,
+.all-rentals {
   margin: 0;
   font-weight: bold;
 }
 
 .unserviced,
-.no-toys {
+.no-rentals {
   color: var(--danger);
 }
 
 .serviced,
-.all-toys {
+.all-rentals {
   color: var(--submit);
 }
 
@@ -117,13 +117,13 @@
 }
 
 .maintenance h2,
-.toys h2 {
+.rentals h2 {
   font-size: 3.2rem;
   margin: 0;
 }
 
 .maintenance h3,
-.toys h3 {
+.rentals h3 {
   font-size: var(--font-xl);
   margin: 10px 0;
 }
@@ -162,16 +162,16 @@
   background-color: #f3f3fd;
 }
 
-.toy-container p {
+.rental-container p {
   margin: 12px 0;
 }
 
-.toy-container a {
+.rental-container a {
   text-decoration: none;
   color: #111;
 }
 
-.toy-container .btn {
+.rental-container .btn {
   padding: 3px 10px;
   margin-left: 10px;
 }
