--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -63,6 +63,10 @@ main > section {
   margin-top: 16px;
 }
 
+/* .img-logo {
+  align-items: center;
+
+} */
 @media only screen and (min-width: 768px) {
   main {
     justify-content: space-around;
