--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -9,12 +9,22 @@
 
 <section class="logo-container">
   <div class="car-container">
-    <img src="{% static 'images/disney-car.svg' %}" alt="The Car Collector Car" />
+    <img class="img-logo" src="{% static 'images/disney-car.svg' %}" alt="The Car Collector Car" />
   </div>
   <img 
     src="{% static 'images/car-collector.png' %}" 
     alt="Text reads: Car Collector"
   />
 </section>
+<section>
+  <form action="{% url 'home' %}" method="post" class="login">
+    <h1>Login</h1>
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="hidden" name="next" value="{{ next }}">
+    <button type="submit" class="btn submit">Login</button>
+  </form>
+</section>
+
 
 {% endblock %}
