--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -29,11 +29,17 @@
     </div>
     <nav>
       <ul>
+        {% if user.is_authenticated %}
         <li><a href="{% url 'cars_index' %}">All Cars</a></li>
         <li><a href="{% url 'rentals_index' %}">All Rentals</a></li>
         <li><a href="{% url 'cars_create' %}">Add a Car</a></li>
         <li><a href="{% url 'rentals_create' %}">Add a Rental</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
+        <li><a href="{% url 'logout' %}">Log out</a></li>
+        {% else %}
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'home' %}">Login</a></li>
+        {% endif %}
       </ul>
     </nav>
   </header>
