--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -16,6 +16,7 @@
     alt="Text reads: Car Collector"
   />
 </section>
+{% if not user.is_authenticated %}
 <section>
   <form action="{% url 'home' %}" method="post" class="login">
     <h1>Login</h1>
